add RAILS_MASTER_KEY env

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -56,5 +56,5 @@ jobs:
         uses: devmasx/brakeman-linter-action@v1.0.0
         env:
           REPORT_PATH: tmp/brakeman.json
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RAILS_MASTER_KEY }}
 
